--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
     </dependency>
 
     <dependency>
-      <groupId>me.xdrop</groupId>
-      <artifactId>jrand</artifactId>
-      <version>0.2.7-alpha</version>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>0.18</version>
     </dependency>
 
     <dependency>
@@ -65,5 +65,23 @@
     </dependency>
 
   </dependencies>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.hisp.dhis.Main</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
