Improved TEI generation
- TEI now includes random program attributes
- Removed dependency to JFaker
- Code cleanup

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,4 +1,5 @@
 
 locust.master.port=5557
 locust.master.host=127.0.0.1
-target.baseuri=https://play.dhis2.org/dev
+#target.baseuri=https://play.dhis2.org/dev
+target.baseuri=http://localhost:8080/dhis
