--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.github.javafaker</groupId>
-      <artifactId>javafaker</artifactId>
-      <version>0.18</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.8</version>
@@ -62,6 +56,24 @@
       <groupId>com.esotericsoftware</groupId>
       <artifactId>kryo</artifactId>
       <version>4.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.andreinc.mockneat</groupId>
+      <artifactId>mockneat</artifactId>
+      <version>0.3.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.andreinc.aleph</groupId>
+      <artifactId>aleph-formatter</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.andreinc.markovneat</groupId>
+      <artifactId>markovneat</artifactId>
+      <version>1.7</version>
     </dependency>
 
   </dependencies>
