--- a/.restyled.yaml
+++ b/.restyled.yaml
@@ -77,9 +77,7 @@ request_review: none
 #
 # These can be used to tell other automation to avoid our PRs.
 #
-labels: [
-  - restyled
-]
+labels: []
 
 # Labels to ignore
 #
