--- a/.restyled.yaml
+++ b/.restyled.yaml
@@ -179,4 +179,4 @@ restylers_version: "20191012"
 #
 restylers:
   - jdt:
-      command: ["formatter:format"]
+      arguments: ["formatter:format"]
