--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
     </dependency>
 
   </dependencies>
+
+  <repositories>
+      <repository>
+        <id>jcenter</id>
+        <url>https://jcenter.bintray.com/</url>
+      </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
