--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>MavenCentral</id>
+      <name>Maven repository</name>
+      <url>https://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
          
   <build>
