--- a/pom.xml
+++ b/pom.xml
@@ -1,100 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.hisp.dhis2</groupId>
-  <artifactId>performance-tests</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>com.github.myzhan</groupId>
-      <artifactId>locust4j</artifactId>
-      <version>1.0.5</version>
-    </dependency>
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>4.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
+	<groupId>org.hisp.dhis2</groupId>
+	<artifactId>performance-tests</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.github.myzhan</groupId>
+			<artifactId>locust4j</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.aeonbits.owner</groupId>
-      <artifactId>owner</artifactId>
-      <version>1.0.10</version>
-    </dependency>
+		<dependency>
+			<groupId>org.aeonbits.owner</groupId>
+			<artifactId>owner</artifactId>
+			<version>1.0.10</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.hisp.dhis</groupId>
-      <artifactId>dhis-service-dxf2</artifactId>
-      <version>2.33.0-SNAPSHOT</version>
-    </dependency>
+		<dependency>
+			<groupId>org.hisp.dhis</groupId>
+			<artifactId>dhis-service-dxf2</artifactId>
+			<version>2.33.0-SNAPSHOT</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.8</version>
-    </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+		</dependency>
 
-    <dependency>
-      <groupId>com.github.ben-manes.caffeine</groupId>
-      <artifactId>caffeine</artifactId>
-      <version>2.7.0</version>
-    </dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
-    <dependency>
-      <groupId>com.esotericsoftware</groupId>
-      <artifactId>kryo</artifactId>
-      <version>4.0.2</version>
-    </dependency>
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 
-    <dependency>
-      <groupId>net.andreinc.mockneat</groupId>
-      <artifactId>mockneat</artifactId>
-      <version>0.3.6</version>
-    </dependency>
+		<dependency>
+			<groupId>net.andreinc.mockneat</groupId>
+			<artifactId>mockneat</artifactId>
+			<version>0.3.6</version>
+		</dependency>
 
-    <dependency>
-      <groupId>net.andreinc.aleph</groupId>
-      <artifactId>aleph-formatter</artifactId>
-      <version>0.1.0</version>
-    </dependency>
+		<dependency>
+			<groupId>net.andreinc.aleph</groupId>
+			<artifactId>aleph-formatter</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 
-    <dependency>
-      <groupId>net.andreinc.markovneat</groupId>
-      <artifactId>markovneat</artifactId>
-      <version>1.7</version>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>net.andreinc.markovneat</groupId>
+			<artifactId>markovneat</artifactId>
+			<version>1.7</version>
+		</dependency>
+	</dependencies>
 
-  <repositories>
-      <repository>
-        <id>jcenter</id>
-        <url>https://jcenter.bintray.com/</url>
-      </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<url>https://jcenter.bintray.com/</url>
+		</repository>
+	</repositories>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>net.revelc.code.formatter</groupId>
-        <artifactId>formatter-maven-plugin</artifactId>
-        <version>2.10.0</version>
-        <configuration>
-          <configFile>${project.basedir}/DHISFormatter.xml</configFile>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>net.revelc.code.formatter</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+				<version>2.10.0</version>
+				<configuration>
+					<configFile>${project.basedir}/DHISFormatter.xml</configFile>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
