--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,21 @@
   </dependencies>
          
   <repositories>
-      <repository>
-        <id>jcenter</id>
-        <url>https://jcenter.bintray.com/</url>
-      </repository>
+    <repository>
+      <id>jcenter</id>
+      <url>https://jcenter.bintray.com/</url>
+    </repository>
+    <repository>
+      <id>ossrh</id>
+      <name>Sonatype OSS</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
          
   <build>
