--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
          
   <repositories>
     <repository>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2</url>
+    </repository>
+    <repository>
       <id>jcenter</id>
       <url>https://jcenter.bintray.com/</url>
     </repository>
