--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
          
   <repositories>
     <repository>
+      <id>github</id>
+      <name>GitHub ashishchopra Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/ashishchopra</url>
+    </repository>
+    <repository>
       <id>central</id>
       <url>https://repo1.maven.org/maven2</url>
     </repository>
