ci: uses GH credentials

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,4 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Compile
+      env:
+        GITHUB_USERNAME: x-access-token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: mvn compile -s settings.xml
