--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,4 +15,4 @@ jobs:
       env:
         GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: mvn compile -s settings.xml
+      run: mvn -s settings.xml compile
