--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.hisp.dhis2</groupId>
   <artifactId>performance-tests</artifactId>
-  <version>1.0.0</version>
+  <version>1.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -79,7 +79,7 @@
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
-      <version>1.0-snapshot</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
          
