--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
-      <version>1.0.0</version>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
