feat: adds api-test-utils (#23)
* feat: adds dependency

* fix: adds maven central repository

* fix: adds github repository

* fix: adds github repository

* ci: uses settings.xml

* ci: uses GH credentials

* improvement: mvn repositories order

* improvement: mvn repositories order

* fix: GH package registry url

* ci: mvn order

* fix: change active profiles

* fix: server id

* documentation: updated README

* chore: locking api-test-utils version

* fix: trying different repo

* fix: trying fixed repo url

* cleanup: removes repositories

* cleanup: changes api-test-utils-version to snapshot

* revert: last commit

--- a/pom.xml
+++ b/pom.xml
@@ -76,26 +76,13 @@
       <version>1.7</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>api-test-utils</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
-         
-  <repositories>
-    <repository>
-      <id>jcenter</id>
-      <url>https://jcenter.bintray.com/</url>
-    </repository>
-    <repository>
-      <id>ossrh</id>
-      <name>Sonatype OSS</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-         
+
   <build>
     <plugins>
       <plugin>
