--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,17 +1,19 @@
-name: Java CI
+name: Build
 
 on: [pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Compile
-      run: mvn compile
+      env:
+        GITHUB_USERNAME: x-access-token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn -s settings.xml compile
