--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>com.github.myzhan</groupId>
       <artifactId>locust4j</artifactId>
-      <version>1.0.8</version>
+      <version>LATEST</version>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
@@ -59,27 +59,9 @@
     </dependency>
 
     <dependency>
-      <groupId>net.andreinc.mockneat</groupId>
-      <artifactId>mockneat</artifactId>
-      <version>0.3.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.andreinc.aleph</groupId>
-      <artifactId>aleph-formatter</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.andreinc.markovneat</groupId>
-      <artifactId>markovneat</artifactId>
-      <version>1.7</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.2</version>
     </dependency>
   </dependencies>
 
