--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     build:
       context: .
     environment:
-      LOCUST_MASTER_BIND_HOST: "127.0.0.1"
-      LOCUST_MASTER_BIND_PORT: "5557"
+      LOCUST_MASTER_NODE_HOST: "127.0.0.1"
+      LOCUST_MASTER_NODE_PORT: "5557"
       LOCUST_FILE: "/locust-master.py"
       HOST: "127.0.0.1"
       NO_WEB: ${NO_WEB:-false}
