--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,17 @@
     </dependency>
 
     <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
       <version>1.1.2</version>
     </dependency>
+
   </dependencies>
 
   <build>
