fix: organising and using request types

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,7 +1,6 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
 #target.baseuri=https://play.dhis2.org/dev
-target.baseuri=http://localhost:8080/dhis
-
+target.baseuri=https://test.performance.dhis2.org/post-event
 # API versions
 analytics.api.version=30
