--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>com.github.myzhan</groupId>
       <artifactId>locust4j</artifactId>
-      <version>1.0.9</version>
+      <version>LATEST</version>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
@@ -107,12 +107,6 @@
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
       <version>1.1.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.13.1</version>
     </dependency>
 
   </dependencies>
