--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,6 +1,10 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
+target.baseuri=http://localhost:8080/
+
 #target.baseuri=https://play.dhis2.org/dev
-target.baseuri=https://test.performance.dhis2.org/post-event
+#target.baseuri=https://test.performance.dhis2.org/2.34
+
+
 # API versions
 analytics.api.version=30
