ci: updates paths

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -1,9 +1,9 @@
-name: Build
+name: Publish image
 
 on:
   pull_request:
     paths:
-      - '../docker/*'
+      - '../../docker/*'
 
 jobs:
   build:
