--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -13,12 +13,12 @@ jobs:
 
     - name: Pull image
       run: docker pull $IMAGE_NAME
-      
+
     - name: Create image
       env:
         GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: docker build -t $IMAGE_NAME ./docker
+      run: docker build --pull --cache-from $IMAGE_NAME -t $IMAGE_NAME ./docker
 
     - name: Test image
       timeout-minutes: 3
