--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -11,14 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Pull image
-      run: docker pull $IMAGE_NAME
-
     - name: Create image
       env:
         GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: docker build --pull --cache-from docker.io/$IMAGE_NAME -t $IMAGE_NAME ./docker
+      run: docker build --pull --cache-from $IMAGE_NAME -t $IMAGE_NAME ./docker
 
     - name: Test image
       timeout-minutes: 3
