--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -13,13 +13,14 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Pull image
-      run: DOCKER_BUILDKIT=1 docker pull $IMAGE_NAME
 
     - name: Create image
       env:
         GITHUB_USERNAME: x-access-token
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: DOCKER_BUILDKIT=1 docker build --cache-from $IMAGE_NAME -t $IMAGE_NAME --build-arg BUILDKIT_INLINE_CACHE=1 ./docker
+      run: |
+        DOCKER_BUILDKIT=1 docker pull $IMAGE_NAME
+        DOCKER_BUILDKIT=1 docker build --cache-from $IMAGE_NAME -t $IMAGE_NAME --build-arg BUILDKIT_INLINE_CACHE=1 ./docker
 
     - name: Test image
       timeout-minutes: 3
