--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         echo $(docker version)
         DOCKER_BUILDKIT=1 docker pull $IMAGE_NAME
+        docker images
         DOCKER_BUILDKIT=1 docker build --cache-from $IMAGE_NAME -t $IMAGE_NAME --build-arg BUILDKIT_INLINE_CACHE=1 ./docker
 
     - name: Test image
