adds docker login

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -24,7 +24,9 @@ jobs:
 
 
     - name: Publish image
-      run: docker push $IMAGE_NAME
+      run: |
+        echo ${{ secrets.DHIS2_BOT_DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DHIS2_BOT_DOCKER_HUB_USERNAME }} --password-stdin
+        docker push $IMAGE_NAME
 
     - name: Test image
       timeout-minutes: 3
