--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -13,25 +13,20 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Create image
-      env:
-        GITHUB_USERNAME: x-access-token
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo $(docker version)
-        DOCKER_BUILDKIT=1 docker pull $IMAGE_NAME
-        docker images
+        docker pull $IMAGE_NAME
         DOCKER_BUILDKIT=1 docker build --cache-from $IMAGE_NAME -t $IMAGE_NAME --build-arg BUILDKIT_INLINE_CACHE=1 ./docker
-
-
-    - name: Publish image
-      run: |
-        echo ${{ secrets.DHIS2_BOT_DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DHIS2_BOT_DOCKER_HUB_USERNAME }} --password-stdin
-        docker push $IMAGE_NAME
 
     - name: Test image
       timeout-minutes: 3
       run: |
-        docker run --publish 8089:8089 --detach --name locust $IMAGE_NAME
+        docker-compose up -d
         bash -c 'while [[ "$(curl -o /dev/null -w ''%{http_code}'' localhost:8089)" != "200" ]]; do sleep 5; done'
+
+      - name: Publish image
+           run: |
+             echo ${{ secrets.DHIS2_BOT_DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DHIS2_BOT_DOCKER_HUB_USERNAME }} --password-stdin
+             docker push $IMAGE_NAME
+
 
 
