--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,10 @@ services:
     restart: always
     image: "dhis2/locustio:latest"
     build:
-      context: .
+      context: ./docker
     environment:
       LOCUST_MASTER_NODE_HOST: "127.0.0.1"
       LOCUST_MASTER_NODE_PORT: "5557"
-      LOCUST_FILE: "/locust-master.py"
       HOST: "127.0.0.1"
       NO_WEB: ${NO_WEB:-false}
       USERS: ${USERS:-10}
@@ -17,7 +16,6 @@ services:
       TIME: ${TIME:-10s}
    
     volumes:
-      - ./locust-master.py:/locust-master.py
       - ./locust:/locust
 
     ports:
