--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
     <dependency>
       <groupId>com.esotericsoftware</groupId>
       <artifactId>kryo</artifactId>
-      <version>4.0.2</version>
+      <version>5.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>de.javakaffee</groupId>
+      <artifactId>kryo-serializers</artifactId>
+      <version>0.45</version>
     </dependency>
 
     <dependency>
