--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,9 +1,8 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
 #target.baseuri=https://play.dhis2.org/dev
-target.baseuri=https://test.performance32.dhis2.org/2.34
+target.baseuri=https://test.performance.dhis2.org/2.34
 # API versions
 analytics.api.version=30
-
 user.admin.username=admin
 user.admin.password=district
