adds more tests, fixes issues

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -6,3 +6,6 @@ target.baseuri=https://test.performance.dhis2.org/2.34
 analytics.api.version=30
 user.admin.username=admin
 user.admin.password=district
+
+# cache properties
+cache.users.pool.size=40
