--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,14 @@
       <version>LATEST</version>
     </dependency>
     <dependency>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.18.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>4.0.0</version>
+      <version>4.3.3</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -34,10 +39,17 @@
       <version>1.0.10</version>
     </dependency>
 
+    </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>dhis-service-dxf2</artifactId>
-      <version>2.33.1-SNAPSHOT</version>
+      <version>2.36-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hisp.dhis</groupId>
+      <artifactId>dhis-service-tracker</artifactId>
+      <version>2.36-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -72,7 +84,7 @@
     <dependency>
       <groupId>org.hisp.dhis</groupId>
       <artifactId>api-test-utils</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
     </dependency>
 
   </dependencies>
