--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
       <version>1.0.10</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.5.0</version>
     </dependency>
     <dependency>
       <groupId>org.hisp.dhis</groupId>
