--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,7 +1,7 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
 #target.baseuri=https://play.dhis2.org/dev
-target.baseuri=https://test.performance.dhis2.org/2.34
+target.baseuri=https://test.performance.dhis2.org/2.36
 # API versions
 analytics.api.version=30
 user.admin.username=admin
@@ -9,3 +9,5 @@ user.admin.password=district
 
 # cache properties
 cache.users.pool.size=40
+# If set to true, user.admin will be used to execute the testss
+cache.users.use_default_user=false
