fix: lots of random fixes

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -9,5 +9,9 @@ user.admin.password=district
 
 # cache properties
 cache.users.pool.size=40
-# If set to true, user.admin will be used to execute the testss
+# If set to true, user.admin will be used to execute the tests
 cache.users.use_default_user=false
+
+#wait between executing the tasks
+locust.min-wait=0
+locust.max-wait=0
