--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,17 +1,22 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
-#target.baseuri=https://play.dhis2.org/dev
-target.baseuri=https://test.performance.dhis2.org/2.36
+target.baseuri=https://test.performance32.dhis2.org/2.36
 # API versions
 analytics.api.version=30
+# The user used to populate the cache
 user.admin.username=admin
 user.admin.password=district
-
-# cache properties
+# CACHE PROPERTIES
+# If set to true, cache will be saved and reused next time main() is executed
+cache.reuse_cache=true
 cache.users.pool.size=40
-# If set to true, user.admin will be used to execute the tests
-cache.users.use_default_user=false
-
+# If set to true, user.admin will be used to execute the tests, along with other cached users
+cache.users.use_admin_user=false
+# All users used in the cache should have a similar name. Cache will be filled with users that contain this name.
+cache.users.base.identifier=uio
+# Password of all the users used in the cache.
+cache.users.password=Test1212?
+# LOCUST PROPERTIES
 #wait between executing the tasks
-locust.min-wait=0
-locust.max-wait=0
+locust.min-wait=20000
+locust.max-wait=30000
