--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,6 +1,6 @@
 locust.master.port=5557
 locust.master.host=127.0.0.1
-target.baseuri=https://test.performance32.dhis2.org/2.36
+target.base_uri=http://localhost:8080/dhis
 # API versions
 analytics.api.version=30
 # The user used to populate the cache
@@ -13,10 +13,10 @@ cache.users.pool.size=40
 # If set to true, user.admin will be used to execute the tests, along with other cached users
 cache.users.use_admin_user=false
 # All users used in the cache should have a similar name. Cache will be filled with users that contain this name.
-cache.users.base.identifier=uio
+cache.users.identifier=uio
 # Password of all the users used in the cache.
 cache.users.password=Test1212?
 # LOCUST PROPERTIES
 #wait between executing the tasks
-locust.min-wait=20000
-locust.max-wait=30000
+locust.min_wait=20000
+locust.max_wait=30000
