refactor: cache and categories

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -7,7 +7,8 @@ analytics.api.version=30
 user.admin.username=admin
 user.admin.password=district
 # CACHE PROPERTIES
-# If set to true, cache will be saved and reused next time main() is executed
+#
+# If set to true, loaded cache will be reused next time main() is executed
 cache.reuse_cache=true
 cache.users.pool.size=40
 # If set to true, user.admin will be used to execute the tests, along with other cached users
@@ -17,6 +18,7 @@ cache.users.identifier=uio
 # Password of all the users used in the cache.
 cache.users.password=Test1212?
 # LOCUST PROPERTIES
-#wait between executing the tasks
+#
+# Task delay
 locust.min_wait=20000
 locust.max_wait=30000
