fix: extracting user ou level property, adding to readme

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -15,6 +15,10 @@ cache.users.pool.size=40
 cache.users.use_admin_user=false
 # All users used in the cache should have a similar name. Cache will be filled with users that contain this name.
 cache.users.identifier=uio
+# Used to restrict users to the organisation unit level. Set lowest level ou to model data entry users.
+# Set to 0 if ou level doesn't matter.
+cache.users.ou_level=5
+
 # Password of all the users used in the cache.
 cache.users.password=Test1212?
 # LOCUST PROPERTIES
