--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,20 @@
-FROM python:3.8-alpine
+FROM locustio/locust
 
-RUN apk --no-cache add g++ zeromq-dev libffi-dev file make musl-dev
-RUN pip install locust==1.4.3 pyzmq Jinja2 \
-      && mkdir /locust \
-      && mkdir /templates
+RUN mkdir ./templates
 
-COPY ./docker-entrypoint.sh /
-COPY ./report-template.html /templates
-COPY ./locust-master.py /
+COPY ./docker-entrypoint.sh /home/locust
+COPY ./report-template.html /home/locust/templates
+COPY ./locust-master.py /home/locust
 
+USER root
 
-RUN chmod +x /docker-entrypoint.sh \
-    && chmod +r /templates/report-template.html \
-    && chmod +r /locust-master.py
+RUN chmod +x ./docker-entrypoint.sh \
+    && chmod +r ./templates/report-template.html \
+    && chmod +r ./locust-master.py
 
-ENV LOCUST_FILE /locust-master.py
-
-WORKDIR /locust
+ENV LOCUST_FILE /home/locust/locust-master.py
 
 EXPOSE 8089
 EXPOSE 5557
-EXPOSE 5558
 
-ENTRYPOINT /docker-entrypoint.sh
-
-ENV PYTHONUNBUFFERED=1
+ENTRYPOINT /home/locust/docker-entrypoint.sh
