--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,14 +6,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
-
-    - name: Compile
-      env:
-        GITHUB_USERNAME: x-access-token
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: mvn -s settings.xml compile
+        java-version: 11
+        distribution: zulu
+        cache: maven
+      - name: Compile
+        env:
+          GITHUB_USERNAME: x-access-token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn -s settings.xml compile
