feat: adds a config property for logging full errors in locust

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,8 +1,15 @@
+target.base_uri=https://test.performance.dhis2.org/dev
+
+# LOCUST PROPERTIES
+
 locust.master.port=5557
 locust.master.host=127.0.0.1
-target.base_uri=http://localhost:8080/dhis
 
-# The user used to populate the cache
+#locust4j stores errors in a hashmap and most of our responses contains uid or another unique attribute,
+#so logging full response can end up being a memory issue when there are many errors.
+locust.log_full_errors=false
+
+# The user used to populate the cache. This user is used in tests if no other users were found and cache.users.use_admin_user is set to true
 user.admin.username=admin
 user.admin.password=district
 
@@ -10,7 +17,7 @@ user.admin.password=district
 #
 # If set to true, loaded cache will be reused next time main() is executed
 cache.reuse_cache=true
-cache.users.pool.size=40
+cache.users.pool.size=100
 # If set to true, user.admin will be used to execute the tests, along with other cached users
 cache.users.use_admin_user=false
 # All users used in the cache should have a similar name. Cache will be filled with users that contain this name.
@@ -20,10 +27,10 @@ cache.users.identifier=uio
 cache.users.ou_levels=5
 # Password of all the users used in the cache.
 cache.users.password=Test1212?
-# LOCUST PROPERTIES
-#
+
 # Task delay
-locust.min_wait=20000
-locust.max_wait=30000
-tracker.importer.async=true
+locust.min_wait=10000
+locust.max_wait=20000
+tracker.importer.async=false
+
 logging.debug = false
