--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,7 +1,7 @@
 FROM maven:3.5.3-jdk-8-slim as builder
-COPY ../pom.xml .
+COPY ./pom.xml .
 RUN mvn dependency:go-offline -B
-COPY ../src ./src
+COPY ./src ./src
 RUN mvn package
 
 FROM adoptopenjdk/openjdk11:alpine-slim
