--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   master:
     build:
-      context: ./docker
+      context: .
       dockerfile: Dockerfile.master
     image: "locustio-master:latest"
     environment:
@@ -21,7 +21,7 @@ services:
       - "8089:8089"
   worker:
     build:
-      context: ./docker
+      context: .
       dockerfile: Dockerfile.worker
     image: "locustio-worker:latest"
     environment:
