fix: update locust master host

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,10 +19,11 @@ services:
     ports:
       - "5557:5557"
       - "8089:8089"
+
   worker:
     build:
       context: .
       dockerfile: Dockerfile.worker
     image: "locustio-worker:latest"
     environment:
-      JAVA_OPTS: "-Dtarget.base_uri=${TARGET} -Dlocust.master.host=https://test.tools.dhis2.org/locustio"
+      JAVA_OPTS: "-Dtarget.base_uri=${TARGET} -Dlocust.master.host=test.tools.dhis2.org"
