refactor: start locust master from pipeline

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,4 +26,4 @@ services:
       dockerfile: Dockerfile.worker
     image: "locustio-worker:latest"
     environment:
-      JAVA_OPTS: "-Dtarget.base_uri=${TARGET} -Dlocust.master.host=test.tools.dhis2.org"
+      JAVA_OPTS: "-Dtarget.base_uri=${TARGET} -Dlocust.master.host=master"
