feat: Make random data generation predictable bease on a seed [TECH-1449]

--- a/src/main/resources/locust.properties
+++ b/src/main/resources/locust.properties
@@ -1,4 +1,4 @@
-target.base_uri=https://test.performance.dhis2.org/dev
+target.base_uri=http://localhost:8080/dhis
 
 # LOCUST PROPERTIES
 
@@ -24,7 +24,7 @@ cache.users.use_admin_user=false
 cache.users.identifier=uio
 # Used to restrict users to the organisation unit levels (comma separated list). Set lowest level ou to model data entry users.
 # Set to 0 if ou level doesn't matter.
-cache.users.ou_levels=5
+cache.users.ou_levels=0
 # Password of all the users used in the cache.
 cache.users.password=Test1212?
 
@@ -34,3 +34,5 @@ locust.max_wait=30000
 
 tracker.importer.async=true
 logging.debug = false
+
+locust.random.seed=1
