fix: Make random data generation predictable based on a seed [TECH-1449]

--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,6 +1,6 @@
 FROM maven:3.5.3-jdk-8-slim as builder
 COPY ./pom.xml .
-RUN mvn dependency:go-offline -B
+RUN mvn --batch-mode dependency:go-offline
 COPY ./src ./src
 RUN mvn package
 
